--- a/descriptive_statistics.ipynb
+++ b/descriptive_statistics.ipynb
@@ -303,12 +303,185 @@
    "id": "61058c32202e2d5a"
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-26T17:45:24.952541Z",
+     "start_time": "2025-03-26T17:45:24.925961Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "stores_df = pd.read_sql('''SELECT * FROM stores;''', engine)",
+   "id": "b3a31cd62b99486d",
+   "outputs": [],
+   "execution_count": 38
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-26T17:51:24.033905Z",
+     "start_time": "2025-03-26T17:51:24.026908Z"
+    }
+   },
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "          Country  Count\n",
+       "0   United States     24\n",
+       "1         Germany      9\n",
+       "2          France      7\n",
+       "3  United Kingdom      7\n",
+       "4       Australia      6\n",
+       "5          Canada      5\n",
+       "6     Netherlands      5\n",
+       "7           Italy      3"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>France</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Canada</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Netherlands</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Italy</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 49,
+   "source": "stores_df.value_counts('Country').reset_index().rename(columns={0: 'Count'})",
+   "id": "38b007529b6c223e"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-26T17:54:30.329906Z",
+     "start_time": "2025-03-26T17:54:30.322427Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "stores_df.value_counts('Country').reset_index().rename(columns={0: 'Count'})['Count'].sum()\n",
+   "id": "87cb280f09454b7",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "66"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 53
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-26T17:57:33.932560Z",
+     "start_time": "2025-03-26T17:57:33.912680Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "stores_df.value_counts('Country').reset_index().rename(columns={0: 'Count'})['Count'].median()\n",
+   "id": "9931cfd8dec4df5f",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.5"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 55
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "The company operates 66 stores across 7 countries, with the United States having the highest count at 24 stores and Italy the lowest at 3 stores. The median number of stores per country is 6.",
+   "id": "8b0daab0c20f751"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Customers Dataset",
+   "id": "176fd66d74df9615"
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "b3a31cd62b99486d"
+   "source": "stores_df = pd.read_sql('''SELECT * FROM stores;''', engine)",
+   "id": "70e9cfdb04e19ba2"
   }
  ],
  "metadata": {
