--- a/descriptive_statistics.ipynb
+++ b/descriptive_statistics.ipynb
@@ -21,8 +21,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T17:14:14.985504Z",
-     "start_time": "2025-03-26T17:14:14.711658Z"
+     "end_time": "2025-04-08T20:52:07.962875Z",
+     "start_time": "2025-04-08T20:52:07.959523Z"
     }
    },
    "cell_type": "code",
@@ -50,18 +50,8 @@
        "        <script type=\"text/javascript\">\n",
        "        window.PlotlyConfig = {MathJaxConfig: 'local'};\n",
        "        if (window.MathJax && window.MathJax.Hub && window.MathJax.Hub.Config) {window.MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}\n",
-       "        if (typeof require !== 'undefined') {\n",
-       "        require.undef(\"plotly\");\n",
-       "        requirejs.config({\n",
-       "            paths: {\n",
-       "                'plotly': ['https://cdn.plot.ly/plotly-2.12.1.min']\n",
-       "            }\n",
-       "        });\n",
-       "        require(['plotly'], function(Plotly) {\n",
-       "            window._Plotly = Plotly;\n",
-       "        });\n",
-       "        }\n",
        "        </script>\n",
+       "        <script type=\"module\">import \"https://cdn.plot.ly/plotly-3.0.1.min\"</script>\n",
        "        "
       ]
      },
@@ -69,23 +59,24 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 3
+   "execution_count": 75
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T17:15:25.817052Z",
-     "start_time": "2025-03-26T17:15:25.784535Z"
+     "end_time": "2025-04-08T20:52:07.988356Z",
+     "start_time": "2025-04-08T20:52:07.983884Z"
     }
    },
    "cell_type": "code",
    "source": [
     "engine = create_engine(\"sqlite:///database/my_database.db\")\n",
-    "metadata = MetaData(bind=engine)"
+    "metadata = MetaData()\n",
+    "metadata.bind = engine"
    ],
    "id": "5b04bc402bef4f59",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 76
   },
   {
    "metadata": {},
@@ -108,21 +99,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T17:17:43.003173Z",
-     "start_time": "2025-03-26T17:17:42.559899Z"
+     "end_time": "2025-04-08T20:52:08.182974Z",
+     "start_time": "2025-04-08T20:52:08.000703Z"
     }
    },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": 6,
    "source": "sales_df = pd.read_sql('''SELECT * FROM sales;''', engine)",
-   "id": "621fd34ab878b6d6"
+   "id": "621fd34ab878b6d6",
+   "outputs": [],
+   "execution_count": 77
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T17:24:27.654263Z",
-     "start_time": "2025-03-26T17:24:27.641580Z"
+     "end_time": "2025-04-08T20:52:08.199465Z",
+     "start_time": "2025-04-08T20:52:08.192937Z"
     }
    },
    "cell_type": "code",
@@ -135,18 +126,18 @@
        "'2016-01-01 00:00:00.000000'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 19
+   "execution_count": 78
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T17:24:36.384571Z",
-     "start_time": "2025-03-26T17:24:36.368242Z"
+     "end_time": "2025-04-08T20:52:08.224506Z",
+     "start_time": "2025-04-08T20:52:08.218425Z"
     }
    },
    "cell_type": "code",
@@ -159,12 +150,12 @@
        "'2021-02-20 00:00:00.000000'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 21
+   "execution_count": 79
   },
   {
    "metadata": {},
@@ -175,8 +166,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T17:35:19.022153Z",
-     "start_time": "2025-03-26T17:35:18.989340Z"
+     "end_time": "2025-04-08T20:52:08.252787Z",
+     "start_time": "2025-04-08T20:52:08.245015Z"
     }
    },
    "cell_type": "code",
@@ -186,7 +177,7 @@
     {
      "data": {
       "text/plain": [
-       "  Currency Code  Percentage\n",
+       "  Currency Code  proportion\n",
        "0           USD    0.536973\n",
        "1           EUR    0.200703\n",
        "2           GBP    0.129445\n",
@@ -213,7 +204,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Currency Code</th>\n",
-       "      <th>Percentage</th>\n",
+       "      <th>proportion</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -247,12 +238,12 @@
        "</div>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 34
+   "execution_count": 80
   },
   {
    "metadata": {},
@@ -263,8 +254,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T17:38:48.674282Z",
-     "start_time": "2025-03-26T17:38:48.641665Z"
+     "end_time": "2025-04-08T20:52:08.286892Z",
+     "start_time": "2025-04-08T20:52:08.281620Z"
     }
    },
    "cell_type": "code",
@@ -285,12 +276,12 @@
        "Name: Quantity, dtype: float64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 35
+   "execution_count": 81
   },
   {
    "metadata": {},
@@ -307,29 +298,31 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T17:45:24.952541Z",
-     "start_time": "2025-03-26T17:45:24.925961Z"
+     "end_time": "2025-04-08T20:52:08.336979Z",
+     "start_time": "2025-04-08T20:52:08.333959Z"
     }
    },
    "cell_type": "code",
    "source": "stores_df = pd.read_sql('''SELECT * FROM stores;''', engine)",
    "id": "b3a31cd62b99486d",
    "outputs": [],
-   "execution_count": 38
+   "execution_count": 82
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T17:51:24.033905Z",
-     "start_time": "2025-03-26T17:51:24.026908Z"
+     "end_time": "2025-04-08T20:52:08.379096Z",
+     "start_time": "2025-04-08T20:52:08.374241Z"
     }
    },
    "cell_type": "code",
+   "source": "stores_df.value_counts('Country').reset_index().rename(columns={0: 'Count'})",
+   "id": "38b007529b6c223e",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "          Country  Count\n",
+       "          Country  count\n",
        "0   United States     24\n",
        "1         Germany      9\n",
        "2          France      7\n",
@@ -359,7 +352,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Country</th>\n",
-       "      <th>Count</th>\n",
+       "      <th>count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -408,62 +401,60 @@
        "</div>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 49,
-   "source": "stores_df.value_counts('Country').reset_index().rename(columns={0: 'Count'})",
-   "id": "38b007529b6c223e"
+   "execution_count": 83
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T17:54:30.329906Z",
-     "start_time": "2025-03-26T17:54:30.322427Z"
+     "end_time": "2025-04-08T20:52:08.429536Z",
+     "start_time": "2025-04-08T20:52:08.425548Z"
     }
    },
    "cell_type": "code",
-   "source": "stores_df.value_counts('Country').reset_index().rename(columns={0: 'Count'})['Count'].sum()\n",
+   "source": "stores_df.value_counts('Country').reset_index().rename(columns={'count': 'Count'})['Count'].sum()",
    "id": "87cb280f09454b7",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "66"
+       "np.int64(66)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 53
+   "execution_count": 84
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T17:57:33.932560Z",
-     "start_time": "2025-03-26T17:57:33.912680Z"
+     "end_time": "2025-04-08T20:52:08.549944Z",
+     "start_time": "2025-04-08T20:52:08.545656Z"
     }
    },
    "cell_type": "code",
-   "source": "stores_df.value_counts('Country').reset_index().rename(columns={0: 'Count'})['Count'].median()\n",
+   "source": "stores_df.value_counts('Country').reset_index().rename(columns={'count': 'Count'})['Count'].median()",
    "id": "9931cfd8dec4df5f",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6.5"
+       "np.float64(6.5)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 55
+   "execution_count": 85
   },
   {
    "metadata": {},
@@ -480,21 +471,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T19:08:38.659762Z",
-     "start_time": "2025-03-26T19:08:38.571792Z"
+     "end_time": "2025-04-08T20:52:08.674861Z",
+     "start_time": "2025-04-08T20:52:08.640022Z"
     }
    },
    "cell_type": "code",
    "source": "customers_df = pd.read_sql('''SELECT * FROM customers;''', engine)",
    "id": "70e9cfdb04e19ba2",
    "outputs": [],
-   "execution_count": 159
+   "execution_count": 86
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T19:08:41.537008Z",
-     "start_time": "2025-03-26T19:08:41.525222Z"
+     "end_time": "2025-04-08T20:52:08.690371Z",
+     "start_time": "2025-04-08T20:52:08.685100Z"
     }
    },
    "cell_type": "code",
@@ -547,12 +538,12 @@
        "</div>"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 161
+   "execution_count": 87
   },
   {
    "metadata": {},
@@ -563,8 +554,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T19:11:44.537633Z",
-     "start_time": "2025-03-26T19:11:44.524504Z"
+     "end_time": "2025-04-08T20:52:08.731093Z",
+     "start_time": "2025-04-08T20:52:08.722219Z"
     }
    },
    "cell_type": "code",
@@ -575,22 +566,22 @@
      "data": {
       "text/plain": [
        "count    15256.000000\n",
-       "mean        56.508485\n",
+       "mean        56.544268\n",
        "std         19.319906\n",
-       "min         23.100866\n",
-       "25%         39.788752\n",
-       "50%         56.665548\n",
-       "75%         73.117294\n",
-       "max         90.142619\n",
+       "min         23.136649\n",
+       "25%         39.824534\n",
+       "50%         56.701331\n",
+       "75%         73.153077\n",
+       "max         90.178402\n",
        "Name: Birthday, dtype: float64"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 165
+   "execution_count": 88
   },
   {
    "metadata": {},
@@ -607,21 +598,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T19:17:15.582883Z",
-     "start_time": "2025-03-26T19:17:15.547436Z"
+     "end_time": "2025-04-08T20:52:08.783627Z",
+     "start_time": "2025-04-08T20:52:08.774263Z"
     }
    },
    "cell_type": "code",
    "source": "products_df = pd.read_sql('''SELECT * FROM products;''', engine)",
    "id": "9abc0c8f6640c7c5",
    "outputs": [],
-   "execution_count": 166
+   "execution_count": 89
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T19:21:31.207277Z",
-     "start_time": "2025-03-26T19:21:31.200872Z"
+     "end_time": "2025-04-08T20:52:08.816455Z",
+     "start_time": "2025-04-08T20:52:08.813108Z"
     }
    },
    "cell_type": "code",
@@ -634,18 +625,18 @@
        "11"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 170
+   "execution_count": 90
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T19:21:00.069238Z",
-     "start_time": "2025-03-26T19:21:00.048518Z"
+     "end_time": "2025-04-08T20:52:08.863877Z",
+     "start_time": "2025-04-08T20:52:08.859228Z"
     }
    },
    "cell_type": "code",
@@ -752,12 +743,12 @@
        "</div>"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 169
+   "execution_count": 91
   },
   {
    "metadata": {},
@@ -768,8 +759,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T19:26:15.963139Z",
-     "start_time": "2025-03-26T19:26:15.953851Z"
+     "end_time": "2025-04-08T20:52:08.895974Z",
+     "start_time": "2025-04-08T20:52:08.891417Z"
     }
    },
    "cell_type": "code",
@@ -790,12 +781,12 @@
        "Name: Unit Price USD, dtype: float64"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 172
+   "execution_count": 92
   },
   {
    "metadata": {},
@@ -806,8 +797,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T19:28:57.045235Z",
-     "start_time": "2025-03-26T19:28:57.035533Z"
+     "end_time": "2025-04-08T20:52:08.950995Z",
+     "start_time": "2025-04-08T20:52:08.945741Z"
     }
    },
    "cell_type": "code",
@@ -1040,12 +1031,12 @@
        "</div>"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 175
+   "execution_count": 93
   },
   {
    "metadata": {},
@@ -1054,12 +1045,17 @@
    "id": "b43b77c7104f3e6"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-08T20:52:09.033243Z",
+     "start_time": "2025-04-08T20:52:09.031363Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "7a0acb898386bc17"
+   "id": "7a0acb898386bc17",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
